--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="131-spinner9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\131-spinner9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ok ok ok ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ok ok ok ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
