--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,31 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="273-checkmark" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\273-checkmark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ok ok ok ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ok ok ok ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="NOT OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NOT OK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="039-file-text2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\039-file-text2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="035-file-text" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\035-file-text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ESPACENET2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ESPACENET.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ESPACENET1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ESPACENET.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="191-menu2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\191-menu2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ESPACENET" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ESPACENET.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="131-spinner91" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\131-spinner91.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="119-user-tie" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\119-user-tie.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NOT OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NOT OK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="033-books" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\033-books.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="273-checkmark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\273-checkmark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="118-user-check" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\118-user-check.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="117-user-minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\117-user-minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="150-cogs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\150-cogs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="131-spinner9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\131-spinner9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ok ok ok ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ok ok ok ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="116-user-plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\116-user-plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="035-file-text" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\035-file-text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ESPACENET1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ESPACENET.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="173-bin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\173-bin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ESPACENET2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ESPACENET.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="429-steam" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\429-steam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
